--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,3 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
-ansible-runner==2.3.4
-appnope==0.1.4
-asttokens==2.4.1
-attrs==23.2.0
-backcall==0.2.0
-backoff==1.11.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-bleach==6.1.0
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==41.0.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-docopt==0.6.2
-docutils==0.20.1
-executing==2.0.1
-expiringdict==1.2.1
-fastjsonschema==2.19.1
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
-gssapi==1.8.3
-idna==3.6
-importlib-metadata==6.2.1
-ipython==8.12.3
-jedi==0.19.1
-Jinja2==3.1.2
-json-tools==0.4.1
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-lockfile==0.12.2
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.7
-mistune==3.0.2
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.4
 numpy==1.26.4
-packaging==23.2
-pandocfilters==1.5.1
-paramiko==3.3.1
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pipreqs==0.5.0
-platformdirs==4.2.1
-prompt-toolkit==3.0.43
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.1
-pycparser==2.21
 PyGithub==2.3.0
-Pygments==2.17.2
-PyJWT==2.8.0
-PyMySQL==1.1.0
-PyNaCl==1.5.0
-pypng==0.20220715.0
-python-daemon==3.0.1
-python-dateutil==2.9.0.post0
-PyYAML==6.0.1
-pyzmq==25.1.2
-qrcode==7.4.2
-referencing==0.35.0
-requests==2.31.0
-rpds-py==0.18.0
-six==1.16.0
-soupsieve==2.5
-stack-data==0.6.3
-tinycss2==1.3.0
-tornado==6.4
-traitlets==5.14.3
-typing_extensions==4.9.0
-urllib3==1.26.18
-wcwidth==0.2.13
-webencodings==0.5.1
-wrapt==1.16.0
-yarg==0.1.9
-zipp==3.17.0
-zmq==0.0.0
+Requests==2.31.0
