--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,9 @@ name: run lunch.py
 
 on:
   schedule:
-    - cron: '*/5 0 * * *' 
+    - cron: '*/15 0 * * *'
+    # - cron: '0 1 * * 1-5'
+    # - cron: '30 1 * * 1-5' 
 
 jobs:
   build:
@@ -22,7 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: execute py script # run main.py
+      - name: execute py script # run lunch.py
         env:
           git_token: ${{ secrets.git_token }}
           hampr_email: ${{ secrets.hampr_email }}
