--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run lunch.py
 
 on:
   schedule:
-    - cron: '*/15 0 * * *'
+    - cron: '*/15 * * * *'
     # - cron: '0 1 * * 1-5'
     # - cron: '30 1 * * 1-5' 
 
