--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run lunch.py
 
 on:
   schedule:
-     - cron: '0 20 * * *'  # UTC -> +10 Sydney 10:00 am every weekday
+     - cron: '0 20 * * *'  # UTC 20:00 -> +10/11 Sydney 6:00/7:00 am everyday
 
 jobs:
   build:
